--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
     </div>
     <ul class="nav-links">
         <li><a href="/dashboard">대시보드</a></li>
-        <li><a href="/manage">기록 보기</a></li>
+        <li><a href="/records">기록 보기</a></li>
         <li><a href="/account">계좌</a></li>
         <li><a href="/banking">입금/출금</a></li>
         <li><a href="/loss">지출</a></li>
@@ -55,7 +55,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 320px;
+    width: 220px;
     height: 100%;
     background-color: #333;
     color: white;
