--- a/views/account.ejs
+++ b/views/account.ejs
@@ -35,6 +35,12 @@
   margin-top: 15px;
 }
 
+
+</style>
+<style>
+  .body{
+    font-family: 'Arial', sans-serif;
+  }
 </style>
 <main>
   <section class="view-section">
