--- a/views/banking.ejs
+++ b/views/banking.ejs
@@ -37,6 +37,12 @@
   
 
     </style>
+
+    <style>
+  .body{
+    font-family: 'Arial', sans-serif;
+  }
+</style>
     <section class="view-section">
       <div class="view-header">
         <h1>입출금 관리</h1>
