--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,5 +1,9 @@
 <%- include('./partials/header') %>
-
+<style>
+  .body{
+    font-family: 'Arial', sans-serif;
+  }
+</style>
 <main>
     <section class="view-section">
         <div class="view-header">
