--- a/views/collaboration.ejs
+++ b/views/collaboration.ejs
@@ -36,6 +36,12 @@
 }
 
 </style>
+
+<style>
+  .body{
+    font-family: 'Arial', sans-serif;
+  }
+</style>
 <main>
   <section class="view-section">
     <div class="view-header">
