--- a/views/records.ejs
+++ b/views/records.ejs
@@ -1,5 +1,10 @@
 <%- include('./partials/header') %>
 
+<style>
+  .body{
+    font-family: 'Arial', sans-serif;
+  }
+</style>
 <main>
   <section class="view-section">
     <div class="view-header">
