--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,11 +15,14 @@
     </div>
     <ul class="nav-links">
         <li><a href="/dashboard">대시보드</a></li>
-        <li><a href="/records">기록 보기</a></li>
         <!-- =============="deprecated due to request"================= -->
+        
         <!--
+        
+           
         <li><a href="/account">계좌</a></li>
         -->
+        <li><a href="/records">기록 보기</a></li>
         <li><a href="/banking">입금/출금</a></li>
         <li><a href="/loss">지출</a></li>
         <li><a href="/orders">주문</a></li>
@@ -55,6 +58,7 @@
 }
 
 .sidebar {
+    font-family: 'Arial', sans-serif !important;
     position: fixed;
     top: 0;
     left: 0;
@@ -89,6 +93,7 @@
 }
 
 .sidebar .nav-links a {
+    font-family: 'Arial', sans-serif;    
     text-decoration: none;
     color: white;
     font-weight: bold;
