--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -36,6 +36,11 @@
 }
 
 </style>
+<style>
+  .body{
+    font-family: 'Arial', sans-serif;
+  }
+</style>
 <main>
   <section class="view-section">
     <div class="view-header">
