--- a/views/help.ejs
+++ b/views/help.ejs
@@ -35,6 +35,13 @@
   margin-top: 15px;
 }
 
+.view-section {
+  padding: 20px;
+  max-width: 1200px;
+  margin: auto;
+  list-style: none;
+}
+
 </style>
 <style>
   .body{
@@ -51,8 +58,9 @@
       <h3>지원 채널</h3>
       <p>이 프로젝트 관련 문의가 있으시면 아래를 이용하세요.</p>
       <ul>
-        <li>이메일: <strong>support@example.com</strong></li>
-        <li>깃헙 이슈: 프로젝트 레포지터리의 Issues</li>
+        <li>이메일: njbsandrewlee@gmail.com</li>
+        <li>전화번호: 010-7268-4290</li>
+        <li>깃헙 이슈: 프로젝트 레포지터리(https://github.com/LeeJiwooKor/reimagined-nini.git)의 Issues</li>
       </ul>
 
       <h3>간단한 가이드</h3>
